--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,21 @@ img{
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--header-logo-color);
+
+    position: relative;
+    
+}
+.header-link.current::after{
+    content: "";
+    width: 100%;
+    height: 4px;
+
+    background-color: var(--accent-color);   
+    border-radius: 2px;
+    
+    position: absolute;
+    left: 0;
+    bottom: -1px;
 }
 .header-link:hover,
 .header-link:focus,
