--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
     --hero-btn-color: #188CE8;
     --background-about-icon: #F5F4FA;
 
+    --bg-work: rgba(47, 48, 58, 0.8);
     --social-icon: #AFB1B8;
 
     --second-background-color:#F5F4FA;
@@ -102,6 +103,8 @@ img{
     color: var(--accent-color);
 }
 .header-link {
+    position: relative;
+
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -112,20 +115,23 @@ img{
     letter-spacing: 0.02em;
     color: var(--header-logo-color);
 
-    position: relative;
+
     
 }
 .header-link.current::after{
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+
     content: "";
     width: 100%;
     height: 4px;
 
     background-color: var(--accent-color);   
     border-radius: 2px;
-    
-    position: absolute;
-    left: 0;
-    bottom: -1px;
+
+
+
 }
 .header-link:hover,
 .header-link:focus,
@@ -299,6 +305,27 @@ img{
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--main-title-color);
+}
+.work-item{
+    position: relative;
+}
+.work-text{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+
+    padding: 27px 0;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: var(--hero-title-color);
+    background: var(--bg-work);
 }
 /* -------------------comand--------------------------- */
 .comand {
