--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,15 @@
     --hero-btn-color: #188CE8;
     --background-about-icon: #F5F4FA;
 
-    --bg-work: rgba(47, 48, 58, 0.8);
+    --bg-overlay-work: rgba(47, 48, 58, 0.8);
+    --bg-overlay-filter:rgba(33, 150, 243, 0.9);
     --social-icon: #AFB1B8;
 
     --second-background-color:#F5F4FA;
     --main-background-color: #2F303A;
     --border-color: #ECECEC;
     --border-color-filter: #EEEEEE;
-    --box-shadow-comand:0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2)
+    --box-shadow-comand:0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
    
 
 }
@@ -309,7 +310,7 @@ img{
 .work-item{
     position: relative;
 }
-.work-text{
+.work-item-text{
     position: absolute;
     width: 100%;
     left: 0;
@@ -325,7 +326,7 @@ img{
     text-transform: uppercase;
 
     color: var(--hero-title-color);
-    background: var(--bg-work);
+    background: var(--bg-overlay-work);
 }
 /* -------------------comand--------------------------- */
 .comand {
@@ -649,7 +650,41 @@ img{
 .filter-container-link:focus,
 .filter-container-link:hover{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    opacity: 1;
+
 }
+.filter-overlay{
+    position: relative;
+    overflow: hidden;
+}
+.filter-overlay-text{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    padding: 63px 24px;
+
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+
+    color: var(--hero-title-color);
+    background-color: rgba(33, 150, 243, 0.9);
+
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.filter-container-link:hover .filter-overlay-text,
+.filter-container-link:focus .filter-overlay-text{
+    transform: translateY(0);
+
+
+ 
+}
+
 .filter-box{
     padding: 20px 24px;
 }
