--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     --bg-overlay-work: rgba(47, 48, 58, 0.8);
     --bg-overlay-filter:rgba(33, 150, 243, 0.9);
     --bg-backdrop: rgba(0, 0, 0, 0.2);
+    --backdrop-btn:rgba(0, 0, 0, 0.1);
     --social-icon: #AFB1B8;
 
     --second-background-color:#F5F4FA;
@@ -257,6 +258,16 @@ img{
     background-color: var(--bg-backdrop);
     z-index: 1;
 }
+.backdrop.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+
+
+}
+.backdrop.is-hidden .modal {
+    transform: scale(1, 2.5) rotate(-20deg) translate(100%, 100%);
+}
 .modal{
     position: absolute;
     left: 50%;
@@ -264,11 +275,31 @@ img{
     transform: translate(-50%, -50%);
     width: 528px;
     height: 581px;
+    padding: 8px;
+
     background-color: var(--hero-title-color);
     border-radius: 4px;
     box-shadow: var(--modal-shadow);
-    
-    
+ 
+    transform: scale(1) rotate(0) translate(-50%, -50%);
+    transition: transform 500ms;
+  
+}
+.modal-btn{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    display: flex;
+    width: 30px;
+    height: 30px;
+
+    justify-content: center;
+    align-items: center;
+    border-radius: 50% 50%;
+    background-color: var(--hero-title-color);
+    border: 1px solid var(--backdrop-btn);
+
+    cursor: pointer;
 }
 
 /* -------------------about--------------------------- */
