--- a/css/style.css
+++ b/css/style.css
@@ -117,9 +117,8 @@ img{
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--header-logo-color);
-
-
     
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-link.current::after{
     position: absolute;
@@ -132,10 +131,9 @@ img{
 
     background-color: var(--accent-color);   
     border-radius: 2px;
-
-
-
+   
 }
+
 .header-link:hover,
 .header-link:focus,
 .header-inf-link:hover,
@@ -159,7 +157,7 @@ img{
     letter-spacing: 0.02em;
     color: var(--primary-color);
 
-
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-inf-icon-convert{
     margin-right: 10px;
@@ -243,6 +241,7 @@ img{
     cursor: pointer;
     background-color: var(--accent-color);
   
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn:focus,
 .hero-btn:hover{
@@ -454,6 +453,12 @@ img{
     align-items: center; 
 
     color: var(--social-icon);
+
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .comand-social-link:hover,
@@ -510,6 +515,9 @@ img{
    border-radius: 4px;
 
    color: var(--social-icon);
+
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-icon{
    fill: currentColor;
@@ -555,6 +563,8 @@ img{
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--hero-title-color);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-adress-link {
     font-style: normal;
@@ -563,6 +573,9 @@ img{
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--footer-tel-mail-text-color);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
 .footer-adress-nav-link:hover,
 .footer-adress-nav-link:focus,
@@ -606,12 +619,13 @@ img{
     border-radius: 50% 50%;
 
     background: rgba(255, 255, 255, 0.1);
-   
     color: var(--hero-title-color);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .join-link:hover,
 .join-link:focus{
-    background: var(--accent-color);
+    background-color: var(--accent-color);
 }
 .join-icon{
     fill: currentColor;
@@ -649,6 +663,10 @@ img{
 
     color: var(--main-title-color);
     cursor: pointer;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .filter-btn-item:not(:last-child){
