--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
     --border-color-filter: #EEEEEE;
     --box-shadow-comand:0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     --modal-shadow:0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-
+    --box-shadow:0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 p, h1, h2, h3, h4, h5, h6{
@@ -241,11 +241,13 @@ img{
     cursor: pointer;
     background-color: var(--accent-color);
   
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn:focus,
 .hero-btn:hover{
     background-color: var(--hero-btn-color) ;
+    box-shadow: var(--box-shadow);
 }
 /* -------------------modal--------------------------- */
 .backdrop{
