--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@
     --box-shadow-comand:0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     --modal-shadow:0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     --box-shadow:0px 4px 4px rgba(0, 0, 0, 0.15);
+    --timer: 250ms;
+    --cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p, h1, h2, h3, h4, h5, h6{
@@ -118,7 +120,7 @@ img{
     letter-spacing: 0.02em;
     color: var(--header-logo-color);
     
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color var(--timer) var(--cubic-bezier);
 }
 .header-link.current::after{
     position: absolute;
@@ -157,7 +159,7 @@ img{
     letter-spacing: 0.02em;
     color: var(--primary-color);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color var(--timer) var(--cubic-bezier);
 }
 .header-inf-icon-convert{
     margin-right: 10px;
@@ -241,8 +243,8 @@ img{
     cursor: pointer;
     background-color: var(--accent-color);
   
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color var(--timer) var(--cubic-bezier),
+    box-shadow var(--timer) var(--cubic-bezier);
 }
 .hero-btn:focus,
 .hero-btn:hover{
@@ -267,7 +269,7 @@ img{
 
 }
 .backdrop.is-hidden .modal {
-    transform: scale(1, 2.5) rotate(-20deg) translate(100%, 100%);
+    transform: scale(1, 2.5)  translate(100%, 100%);
 }
 .modal{
     position: absolute;
@@ -282,8 +284,8 @@ img{
     border-radius: 4px;
     box-shadow: var(--modal-shadow);
  
-    transform: scale(1) rotate(0) translate(-50%, -50%);
-    transition: transform 500ms;
+    transform:  translateY(0% 50%);
+    transition: transform 500ms var(--cubic-bezier);
   
 }
 .modal-btn{
@@ -372,13 +374,15 @@ img{
     width: 100%;
     left: 0;
     bottom: 0;
+    height: 70px;
+    display: flex;
 
-    padding: 27px 0;
+    align-items: center;
+    justify-content: center;
 
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
-    text-align: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 
@@ -440,7 +444,7 @@ img{
 
 .comand-social-list{
     display: flex;
-    justify-content: center;
+    padding: 0 32px;
 
 }
 .comand-social-item:not(:last-child){
@@ -457,9 +461,9 @@ img{
     color: var(--social-icon);
 
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color var(--timer) var(--cubic-bezier),
+    border-radius var(--timer) var(--cubic-bezier),
+    color var(--timer) var(--cubic-bezier);
 
 }
 
@@ -518,8 +522,8 @@ img{
 
    color: var(--social-icon);
 
-   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-   border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: color var(--timer) var(--cubic-bezier),
+   border-color var(--timer) var(--cubic-bezier);
 }
 .clients-icon{
    fill: currentColor;
@@ -566,7 +570,7 @@ img{
     letter-spacing: 0.03em;
     color: var(--hero-title-color);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color var(--timer) var(--cubic-bezier);
 }
 .footer-adress-link {
     font-style: normal;
@@ -576,7 +580,7 @@ img{
     letter-spacing: 0.03em;
     color: var(--footer-tel-mail-text-color);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color var(--timer) var(--cubic-bezier);
  
 }
 .footer-adress-nav-link:hover,
@@ -623,7 +627,7 @@ img{
     background: rgba(255, 255, 255, 0.1);
     color: var(--hero-title-color);
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color var(--timer) var(--cubic-bezier);
 }
 .join-link:hover,
 .join-link:focus{
@@ -666,9 +670,9 @@ img{
     color: var(--main-title-color);
     cursor: pointer;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color var(--timer) var(--cubic-bezier),
+    background-color var(--timer) var(--cubic-bezier),
+    box-shadow var(--timer) var(--cubic-bezier);
 
 }
 .filter-btn-item:not(:last-child){
@@ -721,6 +725,7 @@ img{
 .filter-container-link {
     display: block;
     background-color: var(--hero-title-color);
+    transition:  box-shadow var(--timer) var(--cubic-bezier);
 }
 
 .filter-container-link:focus,
@@ -750,7 +755,7 @@ img{
     background-color: rgba(33, 150, 243, 0.9);
 
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform var(--timer) var(--cubic-bezier);
 
 }
 .filter-container-link:hover .filter-overlay-text,
